--- a/package.json
+++ b/package.json
@@ -1,76 +1,57 @@
 {
-  "name": "koa-pig",
-  "version": "1.0.0",
-  "description": "koa-pig",
+  "name": "express-pig",
+  "version": "0.0.1",
   "main": "index.js",
+  "repository": "git@github.com:DmytroMysak/koa-pig.git",
+  "author": "Dmytro Mysak",
+  "license": "MIT",
   "scripts": {
-    "dev": "concurrently --kill-others \"npm run api\" \"npm run start-dev\"",
-    "deamon": "pm2 start npm -- run dev",
-    "api": "node -r babel-register server/app.js",
-    "start-dev": "webpack-dev-server --port 3000 --hot --host 0.0.0.0 --watch"
+    "start-dev": "gulp",
+    "start": "gulp build && better-npm-run start-prod",
+    "start-dev-pm2": "gulp build && better-npm-run start-dev"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Shkurpylo/koa-pig.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Shkurpylo/koa-pig/issues"
-  },
-  "homepage": "https://github.com/Shkurpylo/koa-pig#readme",
-  "dependencies": {
-    "aws-sdk": "^2.32.0",
-    "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "belle": "^3.0.1",
-    "find-exec": "^1.0.0",
-    "flux": "^3.1.2",
-    "kcors": "^1.3.2",
-    "koa": "^2.2.0",
-    "koa-better-body": "^3.0.2",
-    "koa-bodyparser": "^4.2.0",
-    "koa-router": "^7.1.1",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-icons": "^2.2.3",
-    "react-notification": "^6.6.0",
-    "react-redux": "^5.0.3",
-    "react-router": "^3.0.0",
-    "react-router-redux": "^4.0.8",
-    "react-select": "^1.0.0-rc.3",
-    "redux": "^3.6.0",
-    "redux-async-connect": "^1.0.0-rc4",
-    "superagent": "^3.5.2",
-    "winston": "^2.3.1"
-  },
-  "devDependencies": {
-    "babel-core": "^6.24.0",
-    "babel-eslint": "^7.2.0",
-    "babel-loader": "^6.4.1",
-    "babel-plugin-react-html-attrs": "^2.0.0",
-    "babel-plugin-transform-class-properties": "^6.23.0",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-preset-env": "^1.2.2",
-    "babel-preset-es2015-node": "^6.1.1",
-    "babel-preset-react": "^6.23.0",
-    "babel-preset-stage-3": "^6.22.0",
-    "babel-register": "^6.24.0",
-    "css-loader": "^0.28.0",
-    "eslint": "^3.18.0",
-    "eslint-plugin-react": "^6.10.3",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "html-webpack-plugin": "^2.28.0",
-    "node-sass": "^4.5.2",
-    "sass-loader": "^6.0.3",
-    "style-loader": "^0.16.1",
-    "svg-loader": "0.0.2",
-    "webpack": "^2.3.3",
-    "webpack-dev-server": "^2.4.2"
+  "betterScripts": {
+    "start-prod": {
+      "command": "pm2 start dist/index.js --name server-prod",
+      "env": {
+        "NODE_ENV": "production"
+      }
+    },
+    "start-dev": {
+      "command": "pm2 start dist/index.js --name server-dev",
+      "env": {
+        "NODE_ENV": "development"
+      }
+    }
   },
   "babel": {
     "presets": [
-      "es2015-node",
-      "stage-3"
+      "env"
     ]
+  },
+  "dependencies": {
+    "better-npm-run": "^0.1.0",
+    "body-parser": "^1.18.3",
+    "compression": "^1.7.2",
+    "cors": "^2.8.4",
+    "express": "^4.16.3",
+    "express-winston": "^2.5.1",
+    "helmet": "^3.12.1",
+    "moment": "^2.22.1",
+    "pm2": "^2.10.4",
+    "winston": "^2.4.2"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-stage-3": "^6.24.1",
+    "del": "^3.0.0",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.12.0",
+    "gulp": "gulpjs/gulp#4.0",
+    "gulp-babel": "^7.0.1",
+    "gulp-nodemon": "^2.2.1",
+    "gulp-sourcemaps": "^2.6.4"
   }
 }
