--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,10 @@
 {
-    "extends": "airbnb-base"
+  "extends": "airbnb-base",
+  "rules": {
+    "function-paren-newline": "off",
+    "max-len": [
+      2,
+      120
+    ]
+  }
 }
