--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Dmytro Mysak",
   "license": "MIT",
   "scripts": {
-    "start-dev": "gulp",
+    "start-dev": "gulp run",
     "start": "gulp build && better-npm-run start-prod",
     "start-dev-pm2": "gulp build && better-npm-run start-dev"
   },
@@ -30,13 +30,16 @@
     ]
   },
   "dependencies": {
+    "aws-sdk": "^2.262.1",
     "better-npm-run": "^0.1.0",
     "body-parser": "^1.18.3",
     "compression": "^1.7.2",
     "cors": "^2.8.4",
+    "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-winston": "^2.5.1",
     "helmet": "^3.12.1",
+    "lodash": "^4.17.10",
     "moment": "^2.22.1",
     "pm2": "^2.10.4",
     "winston": "^2.4.2"
