--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 .gulp-cache
 logs/**
+songs/**
 
 # User-specific stuff
 .idea/*
