--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "aws-sdk": "^2.262.1",
+    "axios": "^0.18.0",
     "better-npm-run": "^0.1.0",
     "body-parser": "^1.18.3",
     "compression": "^1.7.2",
