--- a/package.json
+++ b/package.json
@@ -25,11 +25,6 @@
       }
     }
   },
-  "babel": {
-    "presets": [
-      "env"
-    ]
-  },
   "dependencies": {
     "aws-sdk": "^2.262.1",
     "axios": "^0.18.0",
@@ -39,30 +34,29 @@
     "cors": "^2.8.4",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
-    "express-winston": "^2.5.1",
+    "express-winston": "^3.0.0",
     "helmet": "^3.12.1",
     "lodash": "^4.17.10",
     "moment": "^2.22.1",
-    "p-queue": "^2.4.2",
+    "p-queue": "^3.0.0",
     "pg": "^7.4.3",
     "play-sound": "^1.1.2",
-    "pm2": "^2.10.4",
+    "pm2": "^3.0.4",
     "sequelize": "^4.38.0",
     "telegraf": "^3.21.2",
     "uuid": "^3.3.2",
-    "winston": "^2.4.2"
+    "winston": "^3.1.0"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-stage-3": "^6.24.1",
+    "@babel/core": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
     "del": "^3.0.0",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint": "^5.5.0",
+    "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.12.0",
-    "gulp": "gulpjs/gulp#4.0",
-    "gulp-babel": "^7.0.1",
-    "gulp-nodemon": "^2.2.1",
+    "gulp": "gulpjs/gulp.git#4.0",
+    "gulp-babel": "^8.0.0",
+    "gulp-changed": "^3.2.0",
     "gulp-sourcemaps": "^2.6.4"
   }
 }
