--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-winston": "^3.0.0",
+    "fluent-ffmpeg": "^2.1.2",
     "helmet": "^3.12.1",
     "lodash": "^4.17.10",
     "moment": "^2.22.1",
@@ -45,7 +46,8 @@
     "sequelize": "^4.38.0",
     "telegraf": "^3.21.2",
     "uuid": "^3.3.2",
-    "winston": "^3.1.0"
+    "winston": "^3.1.0",
+    "ytdl-core": "^0.25.2"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
