--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "express-winston": "^3.0.0",
     "fluent-ffmpeg": "^2.1.2",
     "helmet": "^3.12.1",
+    "localtunnel": "^1.9.1",
     "lodash": "^4.17.10",
     "moment": "^2.22.1",
     "p-queue": "^3.0.0",
