--- a/package.json
+++ b/package.json
@@ -37,16 +37,15 @@
     "express-winston": "^3.0.0",
     "fluent-ffmpeg": "^2.1.2",
     "helmet": "^3.12.1",
-    "localtunnel": "^1.9.1",
     "lodash": "^4.17.10",
     "moment": "^2.22.1",
+    "ngrok": "^3.0.1",
     "p-queue": "^3.0.0",
     "pg": "^7.4.3",
     "play-sound": "^1.1.2",
     "pm2": "^3.0.4",
     "sequelize": "^4.38.0",
     "telegraf": "^3.21.2",
-    "uuid": "^3.3.2",
     "winston": "^3.1.0",
     "ytdl-core": "^0.25.2"
   },
