--- a/package.json
+++ b/package.json
@@ -27,19 +27,12 @@
   },
   "dependencies": {
     "aws-sdk": "^2.262.1",
-    "axios": "^0.18.0",
     "better-npm-run": "^0.1.0",
-    "body-parser": "^1.18.3",
-    "compression": "^1.7.2",
-    "cors": "^2.8.4",
     "dotenv": "^6.0.0",
-    "express": "^4.16.3",
-    "express-winston": "^3.0.0",
     "fluent-ffmpeg": "^2.1.2",
-    "helmet": "^3.12.1",
     "lodash": "^4.17.10",
     "moment": "^2.22.1",
-    "ngrok": "^3.0.1",
+    "ngrok": "^3.1.0",
     "p-queue": "^3.0.0",
     "pg": "^7.4.3",
     "play-sound": "^1.1.2",
@@ -47,7 +40,7 @@
     "sequelize": "^4.38.0",
     "telegraf": "^3.21.2",
     "winston": "^3.1.0",
-    "ytdl-core": "^0.25.2"
+    "ytdl-core": "^0.26.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
@@ -56,7 +49,7 @@
     "eslint": "^5.5.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.12.0",
-    "gulp": "gulpjs/gulp.git#4.0",
+    "gulp": "gulpjs/gulp#v4.0.0-alpha.3",
     "gulp-babel": "^8.0.0",
     "gulp-changed": "^3.2.0",
     "gulp-sourcemaps": "^2.6.4"
