--- a/client/package.json
+++ b/client/package.json
@@ -6,8 +6,7 @@
   "author": "Dmytro Mysak",
   "license": "MIT",
   "scripts": {
-    "build": "gulp",
-    "start-dev": "gulp run",
+    "start-dev": "node index.js",
     "start": "gulp && better-npm-run start-prod",
     "start-dev-pm2": "gulp && better-npm-run start-dev"
   },
@@ -26,34 +25,20 @@
     }
   },
   "dependencies": {
-    "aws-sdk": "^2.262.1",
     "better-npm-run": "^0.1.0",
     "dotenv": "^6.0.0",
-    "fluent-ffmpeg": "^2.1.2",
     "lodash": "^4.17.10",
     "moment": "^2.22.1",
     "p-queue": "^3.0.0",
-    "pg": "^7.4.3",
     "pino": "^5.10.6",
     "play-sound": "^1.1.2",
     "pm2": "^3.0.4",
-    "sequelize": "^4.38.0",
-    "telegraf": "^3.21.2",
-    "ytdl-core": "^0.26.0"
+    "ws": "^6.1.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "@babel/register": "^7.0.0",
-    "del": "^3.0.0",
-    "eslint": "^5.5.0",
+    "eslint": "^5.12.0",
     "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.12.0",
-    "gulp": "^4.0.0",
-    "gulp-babel": "^8.0.0",
-    "gulp-changed": "^3.2.0",
-    "gulp-nodemon": "^2.4.2",
-    "gulp-sourcemaps": "^2.6.4",
+    "eslint-plugin-import": "^2.14.0",
     "pino-pretty": "^2.5.0"
   }
 }
