--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "express-pig",
-  "version": "0.6.0",
+  "name": "pig-client",
+  "version": "0.7.0",
   "main": "index.js",
   "repository": "git@github.com:DmytroMysak/koa-pig.git",
   "author": "Dmytro Mysak",
