--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
     "better-npm-run": "^0.1.0",
     "dotenv": "^6.0.0",
     "fluent-ffmpeg": "^2.1.2",
+    "lodash": "^4.17.11",
     "pg": "^7.4.3",
     "pino": "^5.10.6",
     "pm2": "^3.0.4",
