--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,7 @@
 {
   "name": "express-pig",
   "version": "0.6.0",
-  "main": "index.js",
+  "main": "src/index.js",
   "repository": "git@github.com:DmytroMysak/koa-pig.git",
   "author": "Dmytro Mysak",
   "license": "MIT",
@@ -26,34 +26,34 @@
     }
   },
   "dependencies": {
-    "aws-sdk": "^2.262.1",
-    "better-npm-run": "^0.1.0",
-    "dotenv": "^6.0.0",
+    "aws-sdk": "^2.639.0",
+    "better-npm-run": "^0.1.1",
+    "dotenv": "^8.2.0",
     "fluent-ffmpeg": "^2.1.2",
-    "lodash": "^4.17.11",
-    "pg": "^7.4.3",
-    "pino": "^5.10.6",
-    "pm2": "^3.0.4",
-    "sequelize": "^4.38.0",
-    "telegraf": "^3.27.1",
-    "ws": "^6.1.2",
-    "ytdl-core": "^0.26.0"
+    "lodash": "^4.17.15",
+    "moment": "^2.24.0",
+    "mongoose": "^5.9.7",
+    "pino": "^5.17.0",
+    "telegraf": "^3.36.0",
+    "ytdl-core": "^2.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "@babel/register": "^7.0.0",
-    "del": "^3.0.0",
-    "eslint": "^5.5.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.12.0",
-    "eslint-plugin-security": "^1.4.0",
-    "eslint-plugin-you-dont-need-lodash-underscore": "^6.4.0",
-    "gulp": "^4.0.0",
+    "@babel/core": "^7.8.7",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
+    "@babel/plugin-proposal-optional-chaining": "^7.8.3",
+    "@babel/preset-env": "^7.8.7",
+    "@babel/register": "^7.8.6",
+    "babel-eslint": "^10.1.0",
+    "del": "^5.1.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-you-dont-need-lodash-underscore": "^6.10.0",
+    "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
-    "gulp-changed": "^3.2.0",
-    "gulp-nodemon": "^2.4.2",
-    "gulp-sourcemaps": "^2.6.4",
-    "pino-pretty": "^2.5.0"
+    "gulp-changed": "^4.0.2",
+    "gulp-nodemon": "^2.5.0",
+    "gulp-sourcemaps": "^2.6.5",
+    "pino-pretty": "^3.6.1"
   }
 }
