--- a/server/package.json
+++ b/server/package.json
@@ -1,59 +1,30 @@
 {
-  "name": "express-pig",
-  "version": "0.6.0",
+  "name": "server-pig",
+  "version": "0.7.0",
   "main": "src/index.js",
   "repository": "git@github.com:DmytroMysak/koa-pig.git",
   "author": "Dmytro Mysak",
   "license": "MIT",
   "scripts": {
-    "build": "gulp",
-    "start-dev": "gulp run",
-    "start": "gulp && better-npm-run start-prod",
-    "start-dev-pm2": "gulp && better-npm-run start-dev"
-  },
-  "betterScripts": {
-    "start-prod": {
-      "command": "pm2 start dist/index.js --name bot-prod",
-      "env": {
-        "NODE_ENV": "production"
-      }
-    },
-    "start-dev": {
-      "command": "pm2 start dist/index.js --name bot-dev",
-      "env": {
-        "NODE_ENV": "development"
-      }
-    }
+    "start": "node src/index.js"
   },
   "dependencies": {
-    "aws-sdk": "^2.639.0",
-    "better-npm-run": "^0.1.1",
+    "@google-cloud/storage": "^5.3.0",
+    "aws-sdk": "^2.771.0",
     "dotenv": "^8.2.0",
     "fluent-ffmpeg": "^2.1.2",
-    "lodash": "^4.17.15",
-    "moment": "^2.24.0",
-    "mongoose": "^5.9.7",
-    "pino": "^5.17.0",
-    "telegraf": "^3.36.0",
-    "ytdl-core": "^2.0.0"
+    "lodash": "^4.17.20",
+    "moment": "^2.29.1",
+    "mongoose": "^5.10.9",
+    "ngrok": "^3.3.0",
+    "pino": "^6.7.0",
+    "telegraf": "^3.38.0",
+    "ytdl-core": "^3.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.7",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
-    "@babel/plugin-proposal-optional-chaining": "^7.8.3",
-    "@babel/preset-env": "^7.8.7",
-    "@babel/register": "^7.8.6",
-    "babel-eslint": "^10.1.0",
-    "del": "^5.1.0",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb-base": "^14.1.0",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-you-dont-need-lodash-underscore": "^6.10.0",
-    "gulp": "^4.0.2",
-    "gulp-babel": "^8.0.0",
-    "gulp-changed": "^4.0.2",
-    "gulp-nodemon": "^2.5.0",
-    "gulp-sourcemaps": "^2.6.5",
-    "pino-pretty": "^3.6.1"
+    "eslint": "^7.11.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.22.1",
+    "pino-pretty": "^4.3.0"
   }
 }
