--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
   "author": "Dmytro Mysak",
   "license": "MIT",
   "scripts": {
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "commit": "cz"
   },
   "dependencies": {
     "@google-cloud/storage": "^5.3.0",
