--- a/server/package.json
+++ b/server/package.json
@@ -7,32 +7,29 @@
   "license": "MIT",
   "scripts": {
     "start": "node src/index.js",
-    "commit": "cz"
+    "commit": "git cz"
   },
   "dependencies": {
     "@google-cloud/storage": "^5.3.0",
     "aws-sdk": "^2.771.0",
     "dotenv": "^8.2.0",
-    "fluent-ffmpeg": "^2.1.2",
     "lodash": "^4.17.20",
-    "moment": "^2.29.1",
     "mongoose": "^5.10.9",
-    "ngrok": "^3.3.0",
     "pino": "^6.7.0",
-    "telegraf": "^3.38.0",
-    "ytdl-core": "^3.3.0"
+    "telegraf": "^3.38.0"
   },
   "devDependencies": {
-    "commitizen": "^4.2.1",
+    "conventional-changelog": "^3.1.23",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^7.11.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "^2.22.1",
+    "ngrok": "^3.3.0",
     "pino-pretty": "^4.3.0"
   },
   "config": {
     "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
+      "path": "./server/node_modules/cz-conventional-changelog"
     }
   }
 }
