--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "server-pig",
-  "version": "0.7.1",
+  "version": "0.8.0",
   "main": "src/index.js",
   "repository": "git@github.com:DmytroMysak/koa-pig.git",
   "author": "Dmytro Mysak",
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@google-cloud/storage": "^5.3.0",
+    "amqplib": "^0.6.0",
     "aws-sdk": "^2.771.0",
     "dotenv": "^8.2.0",
     "lodash": "^4.17.20",
