--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -1,9 +1,20 @@
 {
-    "extends": "airbnb-base",
+    "env": {
+        "commonjs": true,
+        "es2021": true,
+        "node": true
+    },
+    "extends": [
+        "airbnb-base"
+    ],
+    "parserOptions": {
+        "ecmaVersion": 2020
+    },
     "rules": {
-        "max-len": [
-            2,
-            125
-        ]
+        "max-len": ["error", { "code": 130 }],
+        "object-curly-newline": ["error", {
+            "minProperties": 6,
+            "consistent": true
+        }]
     }
 }
