--- a/client/package.json
+++ b/client/package.json
@@ -1,56 +1,32 @@
 {
   "name": "pig-client",
-  "version": "0.7.0",
-  "main": "index.js",
+  "version": "0.9.0",
+  "main": "src/index.js",
   "repository": "git@github.com:DmytroMysak/koa-pig.git",
   "author": "Dmytro Mysak",
   "license": "MIT",
   "scripts": {
-    "build": "gulp",
-    "start-dev": "gulp run",
-    "start": "gulp && better-npm-run start-prod",
-    "start-dev-pm2": "gulp && better-npm-run start-dev"
-  },
-  "betterScripts": {
-    "start-prod": {
-      "command": "pm2 start dist/index.js --name bot-prod",
-      "env": {
-        "NODE_ENV": "production"
-      }
-    },
-    "start-dev": {
-      "command": "pm2 start dist/index.js --name bot-dev",
-      "env": {
-        "NODE_ENV": "development"
-      }
-    }
+    "start": "cross-env NODE_ENV=development node src/index.js",
+    "start:prod": "cross-env NODE_ENV=production node src/index.js"
   },
   "dependencies": {
-    "better-npm-run": "^0.1.0",
-    "dotenv": "^6.0.0",
+    "amqplib": "^0.6.0",
+    "cross-env": "^7.0.2",
+    "dotenv": "^8.2.0",
     "fluent-ffmpeg": "^2.1.2",
-    "lodash": "^4.17.10",
-    "moment": "^2.22.1",
-    "p-queue": "^3.0.0",
-    "pino": "^5.10.6",
-    "play-sound": "^1.1.2",
-    "pm2": "^3.0.4",
-    "ws": "^6.1.2",
-    "ytdl-core": "^3.3.0"
+    "lodash": "^4.17.20",
+    "moment": "^2.29.1",
+    "p-queue": "^6.6.2",
+    "pino": "^6.7.0",
+    "pino-pretty": "^4.3.0",
+    "play-sound": "^1.1.3",
+    "pm2": "^4.5.0",
+    "ws": "^7.3.1",
+    "ytdl-core": "^4.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.3.4",
-    "@babel/preset-env": "^7.3.4",
-    "@babel/register": "^7.0.0",
-    "del": "^4.0.0",
-    "eslint": "^5.12.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.14.0",
-    "gulp": "^4.0.0",
-    "gulp-babel": "^8.0.0",
-    "gulp-changed": "^3.2.0",
-    "gulp-nodemon": "^2.4.2",
-    "gulp-sourcemaps": "^2.6.5",
-    "pino-pretty": "^2.5.0"
+    "eslint": "^7.12.1",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.22.1"
   }
 }
