--- a/client/package.json
+++ b/client/package.json
@@ -13,16 +13,9 @@
     "amqplib": "^0.6.0",
     "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
-    "fluent-ffmpeg": "^2.1.2",
-    "lodash": "^4.17.20",
-    "moment": "^2.29.1",
     "p-queue": "^6.6.2",
     "pino": "^6.7.0",
-    "pino-pretty": "^4.3.0",
-    "play-sound": "^1.1.3",
-    "pm2": "^4.5.0",
-    "ws": "^7.3.1",
-    "ytdl-core": "^4.0.1"
+    "pino-pretty": "^4.3.0"
   },
   "devDependencies": {
     "eslint": "^7.12.1",
