feat(server): added dockerfile and docker compose

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,7 +1,5 @@
 FROM node:14.15.0-alpine
 
-RUN apk add --no-cache ffmpeg
-
 WORKDIR /app
 
 COPY package*.json ./
@@ -9,9 +7,11 @@ COPY package*.json ./
 RUN npm ci --production
 
 COPY src/ src/
+COPY locales/ locales/
 # TODO remove later
 COPY .env .env
+COPY service-account.json service-account.json
 
 ENV NODE_ENV=production
 
-CMD ["node", "src/index.js"]
+CMD ["npm", "run", "start:prod"]
