--- a/server/package.json
+++ b/server/package.json
@@ -6,17 +6,21 @@
   "author": "Dmytro Mysak",
   "license": "MIT",
   "scripts": {
-    "start": "node src/index.js",
+    "start": "cross-env NODE_ENV=development node src/index.js",
+    "start:prod": "cross-env NODE_ENV=production node src/index.js",
     "commit": "git cz"
   },
   "dependencies": {
     "@google-cloud/storage": "^5.3.0",
     "amqplib": "^0.6.0",
     "aws-sdk": "^2.771.0",
+    "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
     "lodash": "^4.17.20",
     "mongoose": "^5.10.9",
+    "ngrok": "^3.3.0",
     "pino": "^6.7.0",
+    "pino-pretty": "^4.3.0",
     "telegraf": "^3.38.0"
   },
   "devDependencies": {
@@ -24,9 +28,7 @@
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^7.11.0",
     "eslint-config-airbnb-base": "^14.2.0",
-    "eslint-plugin-import": "^2.22.1",
-    "ngrok": "^3.3.0",
-    "pino-pretty": "^4.3.0"
+    "eslint-plugin-import": "^2.22.1"
   },
   "config": {
     "commitizen": {
