--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "scripts": {
     "start": "cross-env NODE_ENV=development node src/index.js",
+    "start:pm2": "cross-env NODE_ENV=production pm2 start src/index.js --name pig-client",
     "start:prod": "cross-env NODE_ENV=production node src/index.js"
   },
   "dependencies": {
