--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,34 +1,23 @@
-#This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-
 name: Node.js CI
-
 on:
   push:
     branches: [ master ]
   pull_request:
     branches: [ master ]
-
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     strategy:
       matrix:
-        node-version: [12.x, 14.x]
-
+        node-version: 12.x
     steps:
-      - name: Automated Version Bump Server
-        uses: phips28/gh-action-bump-version@v8.0.12
+      - name: 'Automated Version Bump Server'
+        uses: 'phips28/gh-action-bump-version@v8.0.12'
         with:
-          tag-prefix: v # optional, default is 
-          skip-tag: false
-          PACKAGEJSON_DIR: server 
-
-      - name: Automated Version Bump Client
-        uses: phips28/gh-action-bump-version@v8.0.12
+          tag-prefix: 'v'
+          PACKAGEJSON_DIR: 'server'
+      - name: 'Automated Version Bump Client'
+        uses: 'phips28/gh-action-bump-version@v8.0.12'
         with:
-          tag-prefix: v # optional, default is 
-          skip-tag: false
-          PACKAGEJSON_DIR: client 
+          tag-prefix: 'v'
+          PACKAGEJSON_DIR: 'client'
