--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,8 +16,17 @@ jobs:
         with:
           tag-prefix: 'v'
           PACKAGEJSON_DIR: 'server'
+        env:
+          PACKAGEJSON_DIR: 'client'
+          TAG-PREFIX: 'v'
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       - name: 'Automated Version Bump Client'
         uses: 'phips28/gh-action-bump-version@v8.0.12'
         with:
           tag-prefix: 'v'
           PACKAGEJSON_DIR: 'client'
+        env:
+          PACKAGEJSON_DIR: 'client'
+          TAG-PREFIX: 'v'
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
