--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -11,6 +11,7 @@ jobs:
       matrix:
         node-version: [12.x]
     steps:
+      - uses: actions/checkout@v2
       - name: 'Automated Version Bump Server'
         uses: 'phips28/gh-action-bump-version@v8.0.12'
         with:
