--- a/.github/workflows/version-bump.yml
+++ b/.github/workflows/version-bump.yml
@@ -1,4 +1,4 @@
-name: Node.js CI
+name: Version bump
 on:
   push:
     branches: [ master ]
@@ -16,6 +16,7 @@ jobs:
         uses: 'phips28/gh-action-bump-version@v8.0.12'
         with:
           PACKAGEJSON_DIR: 'server'
+          skip-tag: "true
         env:
           PACKAGEJSON_DIR: 'server'
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
