--- a/.github/workflows/version-bump.yml
+++ b/.github/workflows/version-bump.yml
@@ -16,7 +16,7 @@ jobs:
         uses: 'phips28/gh-action-bump-version@v8.0.12'
         with:
           PACKAGEJSON_DIR: 'server'
-          INPUT_SKIP-TAG: "true"
+          skip-tag: "true"
         env:
           PACKAGEJSON_DIR: 'server'
           INPUT_SKIP-TAG: "true"
