--- a/.github/workflows/server-deploy.yml
+++ b/.github/workflows/server-deploy.yml
@@ -18,4 +18,4 @@ jobs:
           branch: "master"
           usedocker: "true"
           appdir: "server"
-          docker_heroku_process_type: "worker"
+          docker_heroku_process_type: "web"
