--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "server-pig",
+  "name": "pig-server",
   "version": "0.11.2",
   "main": "src/index.js",
   "repository": "git@github.com:DmytroMysak/koa-pig.git",
@@ -11,7 +11,7 @@
     "commit": "git cz"
   },
   "engines": {
-    "node": "12.x"
+    "node": "14.x"
   },
   "dependencies": {
     "@google-cloud/storage": "^5.3.0",
