--- a/.github/workflows/heroku-wakeup.yml
+++ b/.github/workflows/heroku-wakeup.yml
@@ -1,11 +1,15 @@
 name: Heroku Awake
 on:
   schedule:
-    - cron: "*/30 * * * *"
+    - cron: "*/1 * * * *"
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: mikeesto/heroku-awake@1.0.0
+      - uses: satak/webrequest-action@master
         with:
-          URL: 'https://little-pig-bot.herokuapp.com'
+          url: 'https://little-pig-bot.herokuapp.com'
+          method: GET
+#      - uses: mikeesto/heroku-awake@1.0.0
+#        with:
+#          URL: 'https://little-pig-bot.herokuapp.com'
