--- a/.github/workflows/heroku-wakeup.yml
+++ b/.github/workflows/heroku-wakeup.yml
@@ -1,15 +1,12 @@
 name: Heroku Awake
 on:
   schedule:
-    - cron: "*/1 * * * *"
+    - cron: "*/5 * * * *"
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: satak/webrequest-action@master
+      - name: curl
+        uses: wei/curl@v1
         with:
-          url: 'https://little-pig-bot.herokuapp.com'
-          method: GET
-#      - uses: mikeesto/heroku-awake@1.0.0
-#        with:
-#          URL: 'https://little-pig-bot.herokuapp.com'
+          args: '-s -o /dev/null https://little-pig-bot.herokuapp.com'
