--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "aws-sdk": "^2.771.0",
     "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
+    "is-url": "^1.2.4",
     "lodash": "^4.17.20",
     "mongoose": "^5.10.9",
     "pino": "^6.7.0",
