--- a/.github/workflows/version-bump.yml
+++ b/.github/workflows/version-bump.yml
@@ -28,3 +28,8 @@ jobs:
         env:
           PACKAGEJSON_DIR: 'client'
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: 'Automated Version Bump'
+        uses: 'phips28/gh-action-bump-version@v8.0.12'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
