--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,10 @@
   "name": "pig-server",
   "version": "0.16.0",
   "main": "src/index.js",
-  "repository": "git@github.com:DmytroMysak/koa-pig.git",
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com/DmytroMysak/koa-pig.git"
+  },
   "author": "Dmytro Mysak",
   "license": "MIT",
   "scripts": {
@@ -27,8 +30,6 @@
     "telegraf": "^3.38.0"
   },
   "devDependencies": {
-    "conventional-changelog": "^3.1.23",
-    "cz-conventional-changelog": "^3.3.0",
     "eslint": "^7.11.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "^2.22.1",
@@ -38,5 +39,23 @@
     "commitizen": {
       "path": "./server/node_modules/cz-conventional-changelog"
     }
-  }
+  },
+  "description": "Manage command from little pig bot",
+  "bugs": {
+    "url": "https://github.com/DmytroMysak/koa-pig/issues"
+  },
+  "homepage": "https://github.com/DmytroMysak/koa-pig#readme",
+  "keywords": [
+    "rabbitmq",
+    "server",
+    "client",
+    "eslint",
+    "aws",
+    "google-bucket",
+    "mongoose",
+    "pino",
+    "telgram",
+    "telegraf",
+    "ngrok"
+  ]
 }
