--- a/package.json
+++ b/package.json
@@ -29,6 +29,11 @@
     "url": "https://github.com/DmytroMysak/koa-pig/issues"
   },
   "homepage": "https://github.com/DmytroMysak/koa-pig#readme",
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  },
   "devDependencies": {
     "conventional-changelog": "^3.1.24",
     "cz-conventional-changelog": "^3.3.0"
