--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -15,9 +15,9 @@ name: "CodeQL"
 on:
   push:
     branches: [ master ]
-  pull_request:
+#  pull_request:
     # The branches below must be a subset of the branches above
-    branches: [ master ]
+#    branches: [ master ]
   schedule:
     - cron: '16 23 * * 6'
 
